# um_mcc_api

./: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  pyproject.toml  requirements.txt  setup.cfg  supervisord.conf  vercel.json  vercel_build.sh  wsgi.py
.github/: dependabot.yml
api/: app.py
src/co/deability/um_mcc/: __init__.py  app.py  controller.py  cost_calculator.py  cost_calulator.py  person_finder.py  resources.py
src/pages/: announcer.js  app.js  attendee_finder.js  index.html  search.js
test/: conftest.py  test_controller.py  test_core_functionality.py  test_resources.py
test/co/deability/um_mcc/: __init__.py
