[metadata]
name = UM_MCC
version = attr: co.deability.um_mcc.__version__
license = Apache License v2.0
license_files = ./LICENSE
url = https://github.com/whorvath2/um_mcc
download_url = https://github.com/whorvath2/um_mcc/archive/refs/heads/main.zip
author = Bill Horvath
author_email = bill@deability.co
description = Calculator for the cost of a meeting with University of Michigan staff.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = meeting, cost, meeting cost, salary, calculator


[options]
packages = find:
package_dir =
    = src
install_requires =
    Flask
    Flask-Cors
    gunicorn
tests_require =
    pytest

[options.packages.find]
where = src
